--- a/_posts/2021-01-06-BaekJoon1076.md
+++ b/_posts/2021-01-06-BaekJoon1076.md
@@ -1,10 +1,10 @@
 ---
-ㅋlayout: post
+layout: post
 title:  "BaekJoon1076 - 저항"
 date:   2021-01-06 20:59:00 +0800
 categories: Algorithm
 tags: [java, Algorithm, BaekJoon]
-
+comment:true
 ---
 
 
