--- a/_posts/2021-01-06-BaekJoon1076.md
+++ b/_posts/2021-01-06-BaekJoon1076.md
@@ -4,7 +4,7 @@ title:  "BaekJoon1076 - 저항"
 date:   2021-01-06 20:59:00 +0800
 categories: Algorithm
 tags: [java, Algorithm, BaekJoon]
-comment:true
+comments:true
 ---
 
 
